--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@google-cloud/datastore": "^2.0.0",
-    "@google-cloud/storage": "^2.3.1"
+    "@google-cloud/storage": "^2.3.1",
+    "axios": "^0.18.0"
   }
 }
