--- a/serverless.yml
+++ b/serverless.yml
@@ -23,6 +23,10 @@ functions:
     handler: http
     events:
       - http: path
+  second:
+    handler: iss
+    events:
+      - http: path
 
   # NOTE: the following uses an "event" event (pubSub event in this case).
   # Please create the corresponding resources in the Google Cloud
