--- a/serverless.yml
+++ b/serverless.yml
@@ -27,6 +27,10 @@ functions:
     handler: iss
     events:
       - http: path
+  third:
+    handler: conditions
+    events:
+      - http: path
 
   # NOTE: the following uses an "event" event (pubSub event in this case).
   # Please create the corresponding resources in the Google Cloud
